# stochsim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  setup.py
apps/: CMakeLists.txt  run_simulation.cpp
apps/python/: LacZLacY.py  brusselator.py  decay.py  example.py  example_sir.py  sir.py
examples/: LacZLacY.json  brusselator.json  decay.json  sir.json
source/: CMakeLists.txt
source/bindings/: CMakeLists.txt  bindings.cpp  problem.cpp  problem.h  reactions_registry.cpp  reactions_registry.h  run.cpp  run.h  solvers.cpp  solvers.h
source/ssm/: CMakeLists.txt  factory.cpp  factory.h  problem.cpp  problem.h  reaction.cpp  reaction.h  reaction_parser.cpp  reaction_parser.h  reactions_registry.cpp  reactions_registry.h  simulation.cpp  simulation.h  simulation_prototype.cpp  simulation_prototype.h  ssa.cpp  ssa.h  stochastic_simulation_method.cpp  stochastic_simulation_method.h  tau_leaping.cpp  tau_leaping.h  types.h
source/ssm/diagnostics/: CMakeLists.txt  collect_tau.cpp  collect_tau.h  diagnostic.cpp  diagnostic.h  mean_trajectory.cpp  mean_trajectory.h
source/ssm/solvers/: CMakeLists.txt  R0_leaping.cpp  R0_leaping.h  R1_leaping.cpp  R1_leaping.h  R_leaping.cpp  R_leaping.h  solver.cpp  solver.h  ssa.cpp  ssa.h  tau_leaping.cpp  tau_leaping.h
source/ssm/utils/: CMakeLists.txt  algorithms.cpp  algorithms.h  choose.cpp  choose.h  exceptions.cpp  exceptions.h  strprintf.cpp  strprintf.h
source/stochsim/: CMakeLists.txt  factory.cpp  factory.h  problem.cpp  problem.h  reaction.cpp  reaction.h  reaction_parser.cpp  reaction_parser.h  simulation.cpp  simulation.h  types.h
source/stochsim/diagnostics/: CMakeLists.txt  collect_tau.cpp  collect_tau.h  diagnostic.cpp  diagnostic.h  mean_trajectory.cpp  mean_trajectory.h
source/stochsim/solvers/: CMakeLists.txt  R0_leaping.cpp  R0_leaping.h  R1_leaping.cpp  R1_leaping.h  R_leaping.cpp  R_leaping.h  solver.cpp  solver.h  ssa.cpp  ssa.h  tau_leaping.cpp  tau_leaping.h
source/stochsim/utils/: CMakeLists.txt  algorithms.cpp  algorithms.h  exceptions.cpp  exceptions.h  strprintf.cpp  strprintf.h
tests/: CMakeLists.txt
tests/python/: CMakeLists.txt
tests/units/: CMakeLists.txt  R_leaping.cpp  diagnostics.cpp  exceptions.cpp  factory.cpp  problem.cpp  (+6 more)
tools/: plot_mean_trajectories.py  plot_tau.py
(+3 files in other folders)
